[project]
name = "blindern-deployer"
version = "0.1.0"
description = "Automated deployment of our services"
authors = [{ name = "Henrik Steen", email = "henrist@henrist.net" }]
requires-python = "==3.13.*"
dependencies = [
    "ansible==12.3.0",
    "Flask==3.1.2",
    "Flask-Injector==0.15.0",
    "gunicorn==23.0.0",
    "injector==0.24.0",
    "NamedAtomicLock==1.1.3",
    "pydantic==2.12.5",
    "PyJWT[crypto]>=2.8.0",
    "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.0",
    "ty==0.0.15",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
]

[tool.ty.rules]
unresolved-import = "warn"
